# dbt-databricks-lakehouse-sample

./: .gitignore  .sqlfluff  .sqlfluffignore  LICENSE  README.md  catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json  setup.ps1
.code_generation/: comfig.yml
.code_generation/meta/: meta.json
.code_generation/templates/: column.yml  ods.sql  ods.yml  src.yml  stg.sql  stg.yml
.framework/: .pylintrc  init.ps1
.framework/src/: pyproject.toml
.framework/src/framework/: __init__.py  cli.py  code_gen.py  dbt_utils.py  menus.py  utils.py
.framework/tests/: test_framework.py
.github/workflows/: build.yml  dbt-ci-build.yml  dbt-docs-release.yml  dbt-release.yml  framework-ci-build.yml
compiled/databricks_lakehouse_sample/models/sources/test_data/: ods_test_data.sql  stg_test_data.sql
compiled/databricks_lakehouse_sample/models/sources/test_data/stg_test_data.yml/: not_null_stg_test_data_id.sql  unique_stg_test_data_id.sql
dbt/: dbt-deps.txt  dbt_project.yml  profiles.yml
dbt/docs/column_descriptions/: effective_from.md  effective_to.md  is_current.md  is_deleted.md
dbt/macros/: cleanup_orphaned_objects.sql  drop_schema.sql  generate_bk.sql  generate_database_name.sql  generate_pk.sql  generate_schema_name.sql
dbt/models/sources/samples/bakehouse/: ods_sales_customers.sql  ods_sales_customers.yml  sales_customers.yml  stg_sales_customers.sql
dbt/models/sources/test_data/: ods_test_data.sql  ods_test_data.yml  stg_test_data.sql  stg_test_data.yml
dbt/seeds/test_data/: test_data.csv
(+49 files in other folders)
